--- a/BottomAndTopAppBarDemo/app/build.gradle
+++ b/BottomAndTopAppBarDemo/app/build.gradle
@@ -64,4 +64,11 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    implementation 'androidx.navigation:navigation-compose:2.6.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.0'
+
+
+
 }
