--- a/Learn-Kotlin-Flow/app/src/main/AndroidManifest.xml
+++ b/Learn-Kotlin-Flow/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.LearnKotlinFlow"
         tools:targetApi="31">
         <activity
+            android:name=".view.retrofit.SingleNetworkCallActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
