--- a/Learn-Kotlin-Flow/app/src/main/AndroidManifest.xml
+++ b/Learn-Kotlin-Flow/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".FlowLearningApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,9 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnKotlinFlow"
         tools:targetApi="31">
-        <activity
-            android:name=".view.retrofit.SingleNetworkCallActivity"
-            android:exported="false" />
+
         <activity
             android:name=".view.MainActivity"
             android:exported="true"
@@ -26,6 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".view.retrofit.single.SingleNetworkCallActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
