--- a/Learn-Kotlin-Flow/app/src/main/AndroidManifest.xml
+++ b/Learn-Kotlin-Flow/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".FlowLearningApplication"
         android:allowBackup="true"
@@ -14,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnKotlinFlow"
         tools:targetApi="31">
-
+        <activity
+            android:name=".view.retrofit.series.SeriesNetworkCallsActivity"
+            android:exported="false" />
         <activity
             android:name=".view.MainActivity"
             android:exported="true"
@@ -26,7 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".view.retrofit.single.SingleNetworkCallActivity"
             android:exported="false" />
