--- a/ViewModel-Internals/app/src/main/AndroidManifest.xml
+++ b/ViewModel-Internals/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.ViewModelInternals"
         tools:targetApi="31">
         <activity
-            android:name=".customimplementation.CustomViewModelActivity"
+            android:name=".customviewmodel.CustomViewModelActivity"
             android:exported="false" />
         <activity
             android:name=".SecondActivity"
