Add Declarative vs Imperative UI approach

--- a/jetpack-compose-playground/app/src/main/AndroidManifest.xml
+++ b/jetpack-compose-playground/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.JetpackComposePlayground"
         tools:targetApi="31">
         <activity
+            android:name=".others.DeclarativeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".others.ImperativeActivity"
+            android:exported="false" />
+        <activity
             android:name=".intro.RecompositionActivity"
             android:exported="false" />
         <activity
