--- a/jetpack-compose-playground/app/src/main/AndroidManifest.xml
+++ b/jetpack-compose-playground/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.JetpackComposePlayground"
         tools:targetApi="31">
         <activity
+            android:name=".sideeffects.LaunchedEffectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".sideeffects.WhatAreSideEffectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.SideEffectSelectionActivity"
+            android:exported="false" />
+        <activity
             android:name=".others.DeclarativeActivity"
             android:exported="false" />
         <activity
