--- a/jetpack-compose-playground/app/src/main/AndroidManifest.xml
+++ b/jetpack-compose-playground/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.JetpackComposePlayground"
         tools:targetApi="31">
         <activity
+            android:name=".sideeffects.RememberCoroutineScopeActivity"
+            android:exported="false" />
+        <activity
             android:name=".sideeffects.LaunchedEffectActivity"
             android:exported="false" />
         <activity
