--- a/jetpack-compose-playground/app/src/main/AndroidManifest.xml
+++ b/jetpack-compose-playground/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.JetpackComposePlayground"
         tools:targetApi="31">
         <activity
+            android:name=".statehoisting.StateHoistingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".statehoisting.NeedOfStateHoistingActivity"
+            android:exported="false" />
+        <activity
             android:name=".sideeffects.SnapshotFlowActivity"
             android:exported="false" />
         <activity
